Update documentation to exclude build directories in _config.yml and .gitignore, enhance examples.md with clearer build instructions, and improve quick-start.md with additional Python bindings build instructions. Adjust index.md for a more concise tagline and update miplib-records.md to clarify instance details. Remove outdated submodule references in update-solver.sh and navigation.yml for better organization.

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ exclude:
   - submodules/
   - update-solver.sh
   - 布局错误.jpg
+  - Local-MIP-2.0/build/
+  - Local-MIP-2.0/example/build/
+  - Local-MIP-2.0/python-bindings/build/
 
 # Plugins
 plugins:
