Enhance documentation by adding a new Modeling API section in examples.md and tutorials.md, detailing C++ and Python API usage for programmatic model building. Update index.md and quick-start.md to reflect the latest release version (v2.1) and include additional build instructions. Improve navigation structure in navigation.yml and header.html for better accessibility. Update styles in style.scss for a refined visual presentation.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,8 @@
   children:
     - title: Simple API
       url: /examples#simple-api
+    - title: Model API
+      url: /examples#modeling-api
     - title: Start Callback
       url: /examples#start-callback
     - title: Restart Callback
